--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-messaging</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session</artifactId>
+            <version>1.2.0.RELEASE</version>
+        </dependency>
 
     </dependencies>
 
